--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ Flask-SQLAlchemy==2.3.2
 gunicorn==19.9.0
 isort==4.3.4
 itsdangerous==1.1.0
-Jinja2==2.10
+Jinja2>=2.10.1
 jsonschema==2.6.0
 lazy-object-proxy==1.3.1
 Mako==1.0.7
@@ -28,7 +28,7 @@ python-editor==1.0.3
 pytz==2018.9
 PyYAML>=4.2b1
 six==1.12.0
-SQLAlchemy==1.2.15
+SQLAlchemy>=1.3.0
 typed-ast==1.1.1
 Werkzeug==0.14.1
 wrapt==1.10.11
