--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ Flask-SQLAlchemy==2.3.2
 gunicorn==19.9.0
 isort==4.3.4
 itsdangerous==1.1.0
-Jinja2>=2.10.1
+Jinja2==2.10.1
 jsonschema==2.6.0
 lazy-object-proxy==1.3.1
 Mako==1.0.7
@@ -26,9 +26,10 @@ pylint==2.2.2
 python-dateutil==2.7.5
 python-editor==1.0.3
 pytz==2018.9
-PyYAML>=4.2b1
+PyYAML==5.1.2
 six==1.12.0
-SQLAlchemy>=1.3.0
+SQLAlchemy==1.3.7
 typed-ast==1.1.1
-Werkzeug==0.14.1
+virtualenv==16.7.3
+Werkzeug==0.15.5
 wrapt==1.10.11
