--- a/app/api/v1/docs/question/put.yml
+++ b/app/api/v1/docs/question/put.yml
@@ -1,35 +1,50 @@
-Endpoint that creates a question
+Endpoint that updates a question
 ---
 tags:
   - Question
 parameters:
+  - name: question_id
+    description: question id
+    type: integer
+    in: path
+    required: true
   - name: body
-    description: question registration data
+    description: question creation data
     in: body
     required: true
     schema:
       type: object
       required:
-		- "description"
+        - "description"
         - "category"
       properties:
-        name:
+        description:
           type: "string"
           example: "What is the distinctive feature of a set in python?"
-        name:
+        category:
           type: "string"
           example: "Data Structures"
 
 responses:
-  201:
-    description: Question added
+  200:
+    description: Question updated
     schema:
       type: object
       properties:
         message:
           type: string
           enum:
-            - "Question added"
+            - "Question updated"
+  404:
+    description: Question not found
+    schema:
+      type: object
+      properties:
+        message:
+          type: string
+          enum:
+            - "Question not found"
+
   409:
     description: Question already exists
     schema:
@@ -38,4 +53,4 @@ responses:
         message:
           type: string
           enum:
-            - "Question already exists"
+            - "Question by that name already exists"
