--- a/app/api/v1/docs/question/put.yml
+++ b/app/api/v1/docs/question/put.yml
@@ -22,8 +22,8 @@ parameters:
           type: "string"
           example: "What is the distinctive feature of a set in python?"
         category:
-          type: "string"
-          example: "Data Structures"
+          type: "integer"
+          example: 1
 
 responses:
   200:
