--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ astroid==2.1.0
 Click==7.0
 flasgger==0.9.2
 Flask==1.0.2
+Flask-Caching==1.7.2
 Flask-Cors==3.0.7
 Flask-Migrate==2.3.1
 Flask-RESTful==0.3.7
